<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="218dp"
        android:layout_height="177dp"
        android:layout_gravity="center|top"
        app:srcCompat="@drawable/kucing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="18dp">

        <Button
            android:id="@+id/button12"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_gravity="top|left"
            android:backgroundTint="@color/softpink"
            android:text="@string/btn1"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="top|right"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/softpink"
            android:text="@string/btn2"
            app:cornerRadius="30dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/softpink"
        android:text="@string/btn3"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/softpink"
        android:text="@string/right"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="250dp"
        android:backgroundTint="@color/softpink"
        android:text="@string/left"
        app:cornerRadius="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="190dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/cat"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_marginLeft="1dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

    </LinearLayout>

</LinearLayout>