<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="370dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="66dp" >

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="386dp"
            android:layout_height="181dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/person" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="211dp"
            android:layout_height="63dp"
            android:layout_marginLeft="-250dp"
            android:layout_marginBottom="10dp"
            android:ems="7"
            android:text="@string/name"
            android:inputType="text"
            ></EditText>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone:"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="211dp"
            android:layout_height="63dp"
            android:layout_marginLeft="-250dp"
            android:layout_marginBottom="10dp"
            android:ems="7"
            android:inputType="text"
            android:text="@string/ph">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="211dp"
            android:layout_height="63dp"
            android:layout_marginLeft="-250dp"
            android:layout_marginBottom="10dp"
            android:ems="7"
            android:inputType="text"
            android:text="@string/ad">
        </EditText>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="66dp"
            android:text="Button"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/pink"
            app:cornerRadius="30dp" />
    </TableRow>
</TableLayout>